--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "devDependencies": {
     "concurrently": "4.1.0",
+    "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "1.19.1"
   },
   "engines": {
