--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "4.17.1",
+    "jest": "^27.5.1",
     "sequelize": "^6.3.4",
     "sqlite3": "^4.0.1"
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.2",
     "concurrently": "4.1.0",
     "eslint": "^8.27.0",
     "eslint-config-standard": "^17.0.0",
