--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.0",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "1.19.1"
+    "nodemon": "1.19.1",
+    "supertest": "^6.3.1"
   },
   "engines": {
     "node": ">=10.16.3"
