--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:unit": "jest --testMatch=\"**/__tests__/unit/**/?(*.)+(test).[jt]s?(x)\"",
+    "test:e2e": "jest --testMatch=\"**/__tests__/e2e/**/?(*.)+(test).[jt]s?(x)\""
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
