test: add e2e test for admin routes and job pay

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "scripts": {
     "start": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js",
-    "test": "jest",
+    "test": "npm run test:unit",
     "test:unit": "jest --testMatch=\"**/__tests__/unit/**/?(*.)+(test).[jt]s?(x)\"",
-    "test:e2e": "jest --testMatch=\"**/__tests__/e2e/**/?(*.)+(test).[jt]s?(x)\""
+    "test:e2e": "npm run seed & jest --testMatch=\"**/__tests__/e2e/**/?(*.)+(test).[jt]s?(x)\""
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
